--- a/TestingGP/TestingGP/TestingGP.csproj
+++ b/TestingGP/TestingGP/TestingGP.csproj
@@ -77,6 +77,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StructTree.cs" />
     <Compile Include="Tree.cs" />
     <Compile Include="TreeDrower.cs" />
     <Compile Include="TreeMember.cs" />
@@ -124,6 +125,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
