--- a/TestingGP/TestingGP/TestingGP.csproj
+++ b/TestingGP/TestingGP/TestingGP.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Add.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add.Designer.cs">
+      <DependentUpon>Add.cs</DependentUpon>
+    </Compile>
     <Compile Include="Display.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,7 +75,9 @@
     <Compile Include="Tree.cs" />
     <Compile Include="TreeDrower.cs" />
     <Compile Include="TreeMember.cs" />
-    <Compile Include="WebCustomControl1.cs" />
+    <EmbeddedResource Include="Add.resx">
+      <DependentUpon>Add.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Display.resx">
       <DependentUpon>Display.cs</DependentUpon>
     </EmbeddedResource>
