--- a/TestingGP/TestingGP/TestingGP.csproj
+++ b/TestingGP/TestingGP/TestingGP.csproj
@@ -78,9 +78,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tree.cs" />
-    <Compile Include="TreeDrower.cs" />
-    <Compile Include="TreeMember.cs" />
+    <Compile Include="StructBST.cs" />
     <EmbeddedResource Include="Add.resx">
       <DependentUpon>Add.cs</DependentUpon>
     </EmbeddedResource>
